# train_C-

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  a.out  add.cpp  add.h  cmake_install.cmake  main  main.cpp  test  test.cpp  test.out
src/: CMakeLists.txt  Entity.h  Entity2.h  Makefile  Player.h  Printable.h  ScopedPtr.cpp  ScopedPtr.h  Singleton.h  String.cpp  String.h  Strings.cpp  Strings.h  add.cpp  add.h  cmake_install.cmake  log.cpp  log.h  utility.h
